examples/test/testpolicy4218.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4218
  namespace: namespace283
spec:
  podSelector:
    matchLabels:
      key45: value0
      key8: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value17
          key44: value47
      podSelector:
        matchLabels:
          key32: value15
          key4: value22
          key20: value10
